--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <html data-wf-page="5e4a512d7a1811f7e4c855aa" data-wf-site="5e4a512c7a18118ee1c855a6">
 <head>
   <meta charset="utf-8">
-  <title>Photo Masking</title>
-  <meta content="Webflow image masking technique by Sarkis" name="description">
+  <title>taabish interactions</title>
+  <meta content="taabish masking image" name="description">
   <meta content="Photo Masking" property="og:title">
   <meta content="Webflow image masking technique by Sarkis" property="og:description">
   <meta content="https://uploads-ssl.webflow.com/5e28377d321c3d0cb7c590ae/5e288ff6507ef57f269a5000_Splash.jpg" property="og:image">
@@ -25,7 +25,7 @@
     <div data-w-id="bc423bc0-45b2-93ec-1016-8b58fda29c27" class="mask">
       <div data-w-id="d4de2795-1ff4-9062-da0f-be2673a2cfb2" class="image"></div>
     </div>
-    <h1 class="heading">shaikhtaabish.com</h1>
+    <h1 class="heading"></h1>
   </div>
   <div class="background"></div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
